--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </form>
             </div>
         </section>
-        <section id="What-we-do">
+        <section id="What-we-do" class="intro">
             <h2>What We Do</h2>
             <p>
                 butcher selfies chambray shabby chic gentrify readmade yr Echo Park XOXO Tumblr normcorn Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstach pickled twee Wes Anderson Thundercats viral bitters flannel megging narwahal Marfa Schlitz sustainable Intelligentsia umami deep v craft
