--- a/index.html
+++ b/index.html
@@ -55,41 +55,73 @@
             </div>
         </section>
         <section id="What-we-do" class="intro">
-            <h2>What We Do</h2>
+            <h2 class="section-title primary-border">What We Do</h2>
             <p>
                 butcher selfies chambray shabby chic gentrify readmade yr Echo Park XOXO Tumblr normcorn Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstach pickled twee Wes Anderson Thundercats viral bitters flannel megging narwahal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
         </section>
-        <section id="What-you-do">
-            <h2>What You Do</h2>
+        <section id="What-you-do" class="steps">
+            <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
-                <h3>Step 1: Fill Out the Form Above</h3>
+                <h3>Step 1: <span>Fill Out Form Above.</span></h3>
                 <p>You're already here, so why not?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-2.svg" alt="" />
-                <h3>2: Consult with one of our Trainers.</h3>
+                <h3>Step 2: <span>Consult with one of our Trainers.</span></h3>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-3.svg" alt="" />
-                <h3>Step 3: Get Running.</h3>
+                <h3>Step 3: <span>Get Running.</span></h3>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
             </div>
 
             <div>
                 <img src="./assets/images/step-4.svg" alt="" />
-                <h3> Step 4: See Results.</h3>
+                <h3> Step 4: <span>Get Results.</span></h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </div>
         </section>
 
-        <section>
-            <h2>Meet The Trainers</h2>
+        <section id="your-trainers" class="trainers">
+            <h2 class="section-title primary-border">Meet The Trainers</h2>
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+                <div class="trainer-bio text-left">
+                    <h3>Arron Stephens</h3>
+                    <h4>Speed / Strength</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+            </article>
+
+            <article class="trainer">
+                <div class="trainer-bio text-right">
+                    <h3>Joanna Gill</h3>
+                    <h4>Endurance</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+                <img src="./assets/images/01-05-trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            </article>
+
+            <article class="trainer">
+                <img src="./assets/images/01-05-trainers/trainer-3.jpg" alt="Harry Smithe wearing a headband and lifting comically small pink weights" />
+                <div class="trainer-bio text-left">
+                    <h3>Harry "the Headband" Smith</h3>
+                    <h4>Strength</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+                    </p>
+                </div>
+            </article>
         </section>
 
         <section>
