--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             </article>
         </section>
 
-        <section>
-            <h2>Reach Out</h2>
+        <section id="reach-out" class="contact">
+            <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.563522286038!2d-82.60044458431891!3d35.53978248022753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88598d0c3e4617d9%3A0xc38b3f56fe403433!2s721%20Old%20Brevard%20Rd%2C%20Asheville%2C%20NC%2028806!5e0!3m2!1sen!2sus!4v1640299229762!5m2!1sen!2sus" 
                 width="400" 
@@ -134,8 +134,7 @@
                 allowfullscreen="" 
                 loading="lazy">
             </iframe>
-            </div>
-            <div>
+                <div>
                 <h3>Run Buddy</h3>
                 <p>Any questions or concerns before signing up?
                     <br />
@@ -148,6 +147,7 @@
                     P: 555.RUN.BUDZ (555.786.2839)<br/>
                     E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
                 </address>
+                </div>
             </div>
         </section>
         
