--- a/index.html
+++ b/index.html
@@ -60,14 +60,25 @@
                 </form>
             </div>
         </section>
+        
         <section id="What-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
+
+            <div class="flex-row">
+                <h2 class="section-title primary-border">What We Do</h2>
+            </div>
+
+            <div class="flex-row">
             <p>
                 butcher selfies chambray shabby chic gentrify readmade yr Echo Park XOXO Tumblr normcorn Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstach pickled twee Wes Anderson Thundercats viral bitters flannel megging narwahal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
+            </div>
         </section>
+
         <section id="What-you-do" class="steps">
+
+            <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
+            </div>
 
             <div>
                 <img src="./assets/images/step-1.svg" alt="" />
@@ -95,7 +106,11 @@
         </section>
 
         <section id="your-trainers" class="trainers">
+
+            <div class="flex-row">
             <h2 class="section-title primary-border">Meet The Trainers</h2>
+            </div>
+
             <article class="trainer">
                 <img src="./assets/images/01-05-trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
                 <div class="trainer-bio text-left">
@@ -131,7 +146,11 @@
         </section>
 
         <section id="reach-out" class="contact">
+
+            <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
+            </div>
+
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3246.563522286038!2d-82.60044458431891!3d35.53978248022753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88598d0c3e4617d9%3A0xc38b3f56fe403433!2s721%20Old%20Brevard%20Rd%2C%20Asheville%2C%20NC%2028806!5e0!3m2!1sen!2sus!4v1640299229762!5m2!1sen!2sus" 
                 width="400" 
@@ -139,6 +158,7 @@
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy">
+
             </iframe>
             <div class="contact-form">
                 <h3>Contact Us</h3>
