--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
 
                     <p>
                         Have you worked out with a trainer before?
-                        <input type="radio" name="trainer-confirm" id="trainer-yes" />
-                        <label for="trainer-yes">Yes</label>
-                        <input type="radio" name="trainer-confirm" id="trainer-no" />
-                        <label for="trainer-no">No</label>
+                        <span class="radio-wrapper">
+                            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+                            <label for="trainer-yes">Yes</label>
+                        </span>
+                        <span class="radio-wrapper">
+                            <input type="radio" name="trainer-confirm" id="trainer-no" />
+                            <label for="trainer-no">No</label>
+                        </span>
                     </p>
 
                     <p>
-                        <label for="checkbox" >
-                        I acknowledge that I am at least 18 years of age.
-                        </label>
-                        <input type="checkbox" name="age-confirm" id="checkbox" /> 
+                        <span class="checkbox-wrapper">
+                            <input type="checkbox" name="age-confirm" id="checkbox" /> 
+                            <label for="checkbox" > I acknowledge that I am at least 18 years of age.</label>
+                        </span>
                     </p> 
                     <button type="submit">
                         Get Running!
@@ -185,7 +189,7 @@
             <div>
                 <h3>Run Buddy</h3>
                 <p>
-                    
+
                     Any questions or concerns before signing up?
                     <br />
                     Let us know and we'll be happy to talk to you!
